# git_shared_memory

./: inteligent_cc.c  shm.h
kernel_space_consumer/: .icc.o.cmd  .modules.order.cmd  icc.c  icc.ko  icc.mod  icc.mod.c  shm.h
kernel_space_interact/: .Module.symvers.cmd  .icc.ko.cmd  .icc.mod.cmd  .icc.mod.o.cmd
kernel_space_interact/app/: CMakeLists.txt  kernel_interact_app.cpp
kernel_space_interact/inteligence_app/: CMakeLists.txt  equivalencia_app_tcpdump.txt  equivalencia_app_tcpdump2.txt  main.cpp
kernel_space_interact/inteligence_app/CNN_123_rec_keras2c/: standart_output.txt  testkeras2cCNN_ACK_ewma_Send_ewma_RTT_ratio.csv
kernel_space_interact/inteligence_app/CNN_13_rec_keras2c/: standart_input.txt  standart_output.txt  testkeras2cCNN_ACK_ewma_RTT_ratio.csv
kernel_space_interact/inteligence_app/CNN_23_rec_keras2c/: standart_input.txt  standart_output.txt  testkeras2cCNN_Send_ewma_RTT_ratio.csv  testkeras2cCNN_Send_ewma_RTT_ratio.txt
kernel_space_interact/inteligence_app/LSTM_123_100_rec_keras2c/: keras2c_model.c  keras2c_model.h  keras2c_model_test_suite.c  standart_input.txt  standart_output.txt  testkeras2cLSTM_ACK_ewma_Send_ewma_RTT_ratio.csv
kernel_space_interact/inteligence_app/LSTM_13_rec_keras2c/: standart_input.txt  standart_output.txt  testkeras2cLSTM_ACK_ewma_RTT_ratio.csv
kernel_space_interact/inteligence_app/LSTM_23_rec_keras2c/: standart_output.txt  testkeras2cLSTM_Send_ewma_RTT_ratio.csv
kernel_space_interact/inteligence_app/MLP_123_rec_keras2c/: standart_input.txt  standart_output.txt  testkeras2cMLP_ACK_ewma_Send_ewma_RTT_ratio.csv
kernel_space_interact/inteligence_app/MLP_13_rec_keras2c/: standart_input.txt  standart_output.txt  testkeras2cMLP_ACK_ewma_RTT_ratio.csv
kernel_space_interact/inteligence_app/MLP_23_rec_keras2c/: standart_input.txt  standart_output.txt  testkeras2cMLP_Send_ewma_RTT_ratio.csv
kernel_space_interact/inteligence_app/defines/: defines.h
kernel_space_interact/inteligence_app/input_output_configurator/include/: CNN_ACK_RTT_input_output_configurator.h  CNN_Model_input_output_configurator.h  CNN_SND_RTT_input_output_configurator.h  LSTM_ACK_RTT_input_output_configurator.h  LSTM_Model_input_output_configurator.h  LSTM_SND_RTT_input_output_configurator.h  MLP_ACK_RTT_input_output_configurator.h  MLP_Model_input_output_configurator.h  MLP_SND_RTT_input_output_configurator.h  input_output_configurator.h
kernel_space_interact/inteligence_app/input_output_configurator/src/: CNN_ACK_RTT_input_output_configurator.cpp  CNN_Model_input_output_configurator.cpp  CNN_SND_RTT_input_output_configurator.cpp  LSTM_ACK_RTT_input_output_configurator.cpp  LSTM_Model_input_output_configurator.cpp  LSTM_SND_RTT_input_output_configurator.cpp  MLP_ACK_RTT_input_output_configurator.cpp  MLP_Model_input_output_configurator.cpp  MLP_SND_RTT_input_output_configurator.cpp  input_output_configurator.cpp
kernel_space_interact/inteligence_app/keras2c/: CMakeLists.txt  k2c_activations.cpp  k2c_convolution_layers.cpp  k2c_core_layers.cpp  k2c_embedding_layers.cpp  k2c_helper_functions.cpp  k2c_merge_layers.cpp  k2c_normalization_layers.cpp  k2c_pooling_layers.cpp  k2c_recurrent_layers.cpp  keras2c_model_CNN.cpp  keras2c_model_CNN_ACK_RTT.cpp  keras2c_model_CNN_SND_RTT.cpp  keras2c_model_LSTM.cpp  keras2c_model_LSTM_ACK_RTT.cpp  keras2c_model_LSTM_SND_RTT.cpp  keras2c_model_MLP.cpp  keras2c_model_MLP_ACK_RTT.cpp  keras2c_model_MLP_SND_RTT.cpp
kernel_space_interact/inteligence_app/keras2c/keras2c/CNN_3000_epocas/: keras2c_model_CNN.h
kernel_space_interact/inteligence_app/keras2c/keras2c/CNN_3000_epocas_ACK_RTT/: keras2c_model_CNN_ACK_RTT.h
kernel_space_interact/inteligence_app/keras2c/keras2c/CNN_3000_epocas_SND_RTT/: keras2c_model_CNN_SND_RTT.h
kernel_space_interact/inteligence_app/keras2c/keras2c/LSTM_3000_epocas/: keras2c_model_LSTM.h
kernel_space_interact/inteligence_app/keras2c/keras2c/LSTM_3000_epocas_ACK_RTT/: keras2c_model_LSTM_ACK_RTT.h
kernel_space_interact/inteligence_app/keras2c/keras2c/LSTM_3000_epocas_SND_RTT/: keras2c_model_LSTM_SND_RTT  keras2c_model_LSTM_SND_RTT.h
kernel_space_interact/inteligence_app/keras2c/keras2c/MLP_3000_epocas/: keras2c_model_MLP.h
kernel_space_interact/inteligence_app/keras2c/keras2c/MLP_3000_epocas_ACK_RTT/: keras2c_model_MLP_ACK_RTT.h
kernel_space_interact/inteligence_app/keras2c/keras2c/MLP_3000_epocas_SND_RTT/: keras2c_model_MLP_SND_RTT.h
kernel_space_interact/inteligence_app/keras2c/keras2c/Model/: Model.h
kernel_space_interact/inteligence_app/keras2c/keras_models/: 1G10ms-1M1000ms-500K2000ms-250K500ms.model  2M10ms-1M1000ms-250K2000ms-100K500ms-10800s-delayok-40F.model  2M10ms-1M1000ms-250K2000ms-100K500ms-10800s.model  40M10ms-20M1000ms-1M2000ms-500K500msCUBIC-10800s.model  40M30s-30M40s-20M50ms-10M60s-18000s-delayok-1Vegas-39Cubic.model  40M30s-30M40s-20M50ms-10M60s-18000s-delayok-Cubic.model  example_60_min_1G_1M_500K_250K.model  example_link_var.model  training_client01_01_10L_120_min_1G_1M_500K_150K.model  training_client01_01_10L_120_min_1G_1M_500K_150K_2.model  training_client01_01_120_min_1G_1M_500K_150K.model  training_client01_01_1L_30_min_500K_150K_100K_50K_CUBIC.model  training_client01_01_40L_120_min_1G_1M_500K_150K.model  training_client01_01_40L_180_min_1G_1M_500K_150K.model  training_client01_01_40L_180_min_1M_250K_150K_100K.model  vegas.model
kernel_space_interact/inteligence_app/keras2c/keras_models/Exp_0000034/: 40M3s5s-30M4s5s-20M5s5s-10M6s5s-5h-1Vegas-1Cubic.model
kernel_space_interact/inteligence_app/keras2c/keras_models/Exp_0000037/: 01mono_04Reno.model
kernel_space_interact/inteligence_app/keras2c/keras_models/Exp_0000038/: Router_CUBIC.model
kernel_space_interact/inteligence_app/libpcap/pcap/: bluetooth.h  bpf.h  funcattrs.h  pcap.h
kernel_space_interact/inteligence_app/tensor_fill/include/: class_tensor_fill.h
kernel_space_interact/inteligence_app/tensor_fill/src/: class_tensor_fill.cpp
kernel_space_interact/kernel_space_chat/: .icc.ko.cmd  (+8 more)
user_space_memory_prod_cons/: README.md  cc_inteligence.c
user_space_prod_cons/: CMakeLists.txt
(+24 files in other folders)
